# instafade

./: Cargo.toml  README.md  build.rs
src/: blend.rs  main.rs
