[package]
name = "instafade"
authors = ["OctopuSSX"]
description = "osu! instafade skin generator"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"

[dependencies]
color-name = "1.1.0"
dialoguer = "0.10.4"
fs_extra = "1.3.0"
image = "0.24.6"
imageproc = "0.23.0"
native-dialog = "0.6.3"
regex = "1.8.2"
rust-ini = "0.19.0"
